Removed slider from filter

--- a/public/index.html
+++ b/public/index.html
@@ -252,26 +252,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="form-group">
-							<div class="col-xs-12">
-								<div class="row">
-									<div class="col-xs-12 text-center filtersectionheader top15">
-										A-Range
-									</div>
-								</div>
-								<div class="row top10">
-									<div class="col-xs-12">
-										<input type="range" id="myRange" onchange="sliderUpdate()" value="0">
-									</div>
-								</div>
-								<div class="row">
-									<div class="col-xs-12" id="sliderSubLabel">
-										<xsall>At least <b>0%</b> of students got As</xsall>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="form-group">
+						<div class="form-group top40">
 							<div class="col-xs-12">
 								<button type="button" onclick="filter();" class="btn btn-lg col-xs-12" style="color:white; font-size: xsall; font-face: 'HelveticaNeue" id="submitquery">Search</button>
 							</div>
