--- a/public/index.html
+++ b/public/index.html
@@ -63,7 +63,8 @@
 							<input type="text" oninput="searchChange()" style="font-size: 10pt" class="form-control" id="searchbar" placeholder="Search...">
 						</form>
 					</div>
-					<div class="row top60">
+					<div class="top30"><p class="freeriderbox">Due to the <b><a href="http://www.wikipedia.org/wiki/Free-rider_problem" style="color:#333333">Free Rider Problem</a></b><br> we have no way to entice users to <br>submit their A-Ranges. So we ask <br> you to please help out if you can.<br></p></div>
+					<div class="row top40">
 						<div id="submission">
 							<div class="row">
 								<div class="text-center top15" style="font-size: 15pt; font-face: 'HelveticNeue">
@@ -161,20 +162,9 @@
 			</div>
 			<div class="">
 				<div class="col-xs-2" id="filter">
-					<form class="form-horizontal" id="filterform">
-						<label class="h4 text-center top15">Want to boost your GPA?</label>
-						<!--<div class="form-group top15">
-							<div class="col-xs-12 text-center" id="paramheader">
-								Text Filter
-							</div>
-							<div class="col-xs-12">
-								<input type="text" style="font-size: 8.5pt" class="form-control" id="textparam" placeholder="e.g. “ECON” or “PHYS”">
-							</div>
-							<div class="col-xs-10 col-xs-push-1 text-center" id="paramnote">
-								<xsall>FYI: The other textfield will search as you type. This wont.</xsall>
-							</div>
-						</div>-->
-						<div class="form-group top15">
+					<form class="form-horizontal text-center" id="filterform">
+						<label class="h4 top15">Course Filter</label>
+						<div class="form-group top10">
 							<div class="col-xs-12 bottom15">
 								<button type="button" class="btn btn-lg col-xs-12" style="color:white; font-size: xsall; font-face: 'HelveticaNeue" id="technical">Technical</button>
 								<button type="button" class="btn btn-lg col-xs-12 top15" style="color:white; font-size: xsall; font-face: 'HelveticaNeue" id="nontechnical">Non-Tech</button>
