--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,7 @@
 		</div>
 	</div>
 
-	<div id="mainrow container">
+	<div id="mainrow container" class="bottom30">
 		<div class="row center-inner" id="innermainrow">
 
 			<div class="col-xs-5 top45 container " id="rightcollumn">
@@ -63,7 +63,7 @@
 							<input type="text" oninput="searchChange()" style="font-size: 10pt" class="form-control" id="searchbar" placeholder="Search...">
 						</form>
 					</div>
-					<div class="top30"><p class="freeriderbox">Due to the <b><a href="http://www.wikipedia.org/wiki/Free-rider_problem" style="color:#333333">Free Rider Problem</a></b><br> we have no way to entice users to <br>submit their A-Ranges. So we ask <br> you to please help out if you can.<br></p></div>
+					<div class="top30"><p class="freeriderbox">Due to the <b><a href="http://www.wikipedia.org/wiki/Free-rider_problem" target="_blank" style="color:#333333">Free Rider Problem</a></b><br> we have no way to entice users to <br>submit their A-Ranges. So we ask <br> you to please help out if you can.<br></p></div>
 					<div class="row top40">
 						<div id="submission">
 							<div class="row">
