--- a/public/index.html
+++ b/public/index.html
@@ -26,8 +26,8 @@
 		<div class="text-center" id="message" style="font-size: 18pt; color: #BD0FE1;"><b></b></div>
 	</div>
 
-	<div id="mainheader" class="center-inner">
-		<div class="row left30 bottom30">
+	<div id="mainheader" class="center-inner bottom30">
+		<div class="left30 bottom30">
 			<div class="col-xs-1 text-center" id="fbbtn">
 				<b>Please Share!</b>
 				<div class="fb-share-button " data-href="https://www.ezacu.com/" data-layout="button" data-size="large" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fwww.ezacu.com%2F&amp;src=sdkpreparse">Share</a>
