Added og: meta title and description

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,8 @@
 <head>
 	<meta charset="UTF-8">
 	<title>EZACU</title>
+	<meta property="og:title" content="EZACU" />
+	<meta property="og:description" content="Search for and rank the A-Ranges of professors at Columbia University." />
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/custom.css">
 	<datalist id="courseIdList">
