--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>EZACU</title>
+	<link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
 	<meta property="og:title" content="EZACU" />
 	<meta property="og:description" content="Search for and rank the A-Ranges of professors at Columbia University." />
 	<link rel="stylesheet" href="css/bootstrap.min.css">
