--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,12 @@
 	<meta charset="UTF-8">
 	<title>EZACU</title>
 	<link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
+	<meta property="og:type" content="website" />
 	<meta property="og:title" content="EZACU" />
 	<meta property="og:description" content="Search for and rank the A-Ranges of professors at Columbia University." />
+	<meta property="og:image" content="https://www.ezacu.com/assets/favicon_fb.png" />
+	<meta property="og:url" content="www.ezacu.com/" />
+	<meta property="fb:app_id" content="1007010152777162" />
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/custom.css">
 	<datalist id="courseIdList">
