--- a/public/index.html
+++ b/public/index.html
@@ -36,9 +36,8 @@
 	<div id="mainheader" class="center-inner bottom30">
 		<div class="left30 bottom30">
 			<div class="col-xs-1 text-center" id="fbbtn">
-				<b>Please Share!</b>
-				<div class="fb-share-button " data-href="https://www.ezacu.com/" data-layout="button" data-size="large" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fwww.ezacu.com%2F&amp;src=sdkpreparse">Share</a>
-				</div>
+				<b>Like our page!</b>
+				<div class="fb-like top4" data-href="https://www.facebook.com/ezacupage/" data-layout="button" data-action="like" data-size="large" data-show-faces="true" data-share="false"></div>
 			</div>
 			<div class="col-xs-7 col-xs-push-0 top30">
 				<div id="title">
