--- a/public/index.html
+++ b/public/index.html
@@ -269,7 +269,7 @@
 <script src="https://www.gstatic.com/firebasejs/3.6.4/firebase.js"></script>
 <script src="js/custom.js" type="text/javascript">
 </script>
-<script>initDatabase();</script>
+<script>init();</script>
 
 <script src="js/bootstrap.min.js"></script>
 </body>
