--- a/public/index.html
+++ b/public/index.html
@@ -167,7 +167,7 @@
 				</div>
 			</div>
 			<div class="">
-				<div class="col-xs-2" id="filter">
+				<div class="col-xs-2 bottom30" id="filter">
 					<form class="form-horizontal text-center" id="filterform">
 						<label class="h4 top15">Course Filter</label>
 						<div class="form-group top10">
@@ -255,6 +255,7 @@
 						</div>
 					</form>
 				</div>
+				<div class="text-center" style="font-size: 24pt;"><font face="Consolas"><a style="color:#032EEE;" href="./faq.html" target="_blank"><b id="faqsign">F.A.Q.</b></a></font></div>
 			</div>
 		</div>
 	</div>
@@ -269,7 +270,7 @@
 <script src="https://www.gstatic.com/firebasejs/3.6.4/firebase.js"></script>
 <script src="js/custom.js" type="text/javascript">
 </script>
-<script>initDatabase();</script>
+<script>init();</script>
 
 <script src="js/bootstrap.min.js"></script>
 </body>
