--- a/public/faq.html
+++ b/public/faq.html
@@ -15,16 +15,16 @@
 </head>
 <body>
 <h1 class="text-center bottom15"><font face="Consolas"><b>F.A.Q.</b></font></h1>
-<h4 class="text-center top45"><b>Where is the data coming from?</b></h4>
-<p class="text-center" id="inner" style="font-size: 12pt;">Every student in Columbia College or General Studies has access to the percentage of students in each of their classes who received an A- or better. Each student only has access to these statistics for the classes they've already taken, so EZACU allows students to submit their own data in order to allow other students to view this information, even if they haven't taken the class yet.</p>
-<h4 class="text-center top45"><b>How accurate is the data?</b></h4>
-<p class="text-center" id="inner" style="font-size: 12pt;">Unfortunately, there is no way to verify if an A-Range is valid or not, so a student could hypothetically submit a false A-Range, corrupting the data. However, I look at all submissions and routinely prune suspicious data. There is also no incentive for students to submit false data (i.e. no raffles, etc.). Students can also view all the submissions for a professor/course, and if it's a popular class, could easily spot the odd one out. Beyond this, take any data from this site with a grain of salt. The more data we have, the easier it is for students to cross-validate.</p>
-<h4 class="text-center top45"><b>Why can't I see my A-Ranges?</b></h4>
-<p class="text-center" id="inner" style="font-size: 12pt;">If you are not in General Studies or Columbia College, I do not believe you will have access to your own A-Ranges. Some courses also do not provide A-Ranges to <i>any</i> student, such as language classes. After a semester is over, it also appears that students won't have access to their A-Ranges right away, but will after some time has elapsed.</p>
-<h4 class="text-center top45"><b>Did you spot bad/suspicious data? Did you accidentally submit a bad A-Range?</b></h4>
-<p class="text-center" id="inner" style="font-size: 12pt;">Let me know! You can email me at lol2107@columbia.edu. I can pull data from the site in a matter of seconds, and I routinely check my email. I appreciate students trying to keep the site clean.</p>
-<h4 class="text-center top45"><b>Want to contribute? Or use the data?</b></h4>
-<p class="text-center" id="inner" style="font-size: 12pt;">Shoot me an email. I'll happily take suggestions, or let you fork the repo and implement the feature yourself. There's also an API. Here's the endpoint: http://ec2-52-206-186-12.compute-1.amazonaws.com/search?query=economics</p>
-<p class="text-center top45 bottom30" style="font-size: 12pt;">Thanks for a great year. 16,000+ hits, and 30,000+ searches.</p>
+<h4 class="left30 right30 top45"><b>Where is the data coming from?</b></h4>
+<p class="left30 right30" style="font-size: 12pt;">Every student in Columbia College or General Studies has access to the percentage of students in each of their classes who received an A- or better. Each student only has access to these statistics for the classes they've already taken, so EZACU allows students to submit their own data in order to allow other students to view this information, even if they haven't taken the class yet.</p>
+<h4 class="left30 right30 top45"><b>How accurate is the data?</b></h4>
+<p class="left30 right30" style="font-size: 12pt;">Unfortunately, there is no way to verify if an A-Range is valid or not, so a student could hypothetically submit a false A-Range, corrupting the data. However, I look at all submissions and routinely prune suspicious data. There is also no incentive for students to submit false data (i.e. no raffles, etc.). Students can also view all the submissions for a professor/course, and if it's a popular class, could easily spot the odd one out. Beyond this, take any data from this site with a grain of salt. The more data we have, the easier it is for students to cross-validate.</p>
+<h4 class="left30 right30 top45"><b>Why can't I see my A-Ranges?</b></h4>
+<p class="left30 right30" style="font-size: 12pt;">If you are not in General Studies or Columbia College, I do not believe you will have access to your own A-Ranges. Some courses also do not provide A-Ranges to <i>any</i> student, such as language classes. After a semester is over, it also appears that students won't have access to their A-Ranges right away, but will after some time has elapsed.</p>
+<h4 class="left30 right30 top45"><b>Did you spot bad/suspicious data? Did you accidentally submit a bad A-Range?</b></h4>
+<p class="left30 right30" style="font-size: 12pt;">Let me know! You can email me at lol2107@columbia.edu. I can pull data from the site in a matter of seconds, and I routinely check my email. I appreciate students trying to keep the site clean.</p>
+<h4 class="left30 right30 top45"><b>Want to contribute? Or use the data?</b></h4>
+<p class="left30 right30" style="font-size: 12pt;">Shoot me an email. I'll happily take suggestions, or let you fork the repo and implement the feature yourself. There's also an API. Here's the endpoint: http://ec2-52-206-186-12.compute-1.amazonaws.com/search?query=economics</p>
+<p class="left30 right30 top45 bottom30" style="font-size: 12pt;">Thanks for a great year. 16,000+ hits, and 30,000+ searches.</p>
 </body>
 </html>
