--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,10 @@
 	<div class="row"><!--Delete this patch-notes later-->
 		<div class="text-center" id="message" style="font-size: 18pt; color: #BD0FE1;"><b></b></div>
 	</div>
-
+	<div class="row center-inner" id="tabbar">
+		<div class="text-center tab col-xs-2" id="ezacutab"><a href="https://www.ezacu.com/" style="font-size: 14pt; color: #666666; font-face: 'HelveticaNeue"><i><b>EZACU.com</b></i></a></div>
+		<span><div class="text-center tab col-xs-2" id="scorecutab"><a href="https://www.scorecu.com/" style="font-size: 14pt; color: #323332; font-face: 'HelveticaNeue"><i><b>ScoreCU.com</b></i></a></div></span>
+	</div>
 	<div id="mainheader" class="center-inner bottom30">
 		<div class="left30 bottom30">
 			<div class="col-xs-1 text-center" id="fbbtn">
